added activity tablet to be loaded up after first three activities. styled links to activity search

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -605,6 +605,7 @@
 	 </div>
 </script>
 
+
 <script type="text/mustache-template" id="activitiesListTemplate">
 	<div class="header b-b bg-white-only activitiesHeader">
     <h4 class="m-t m-b-none" id="title">Search Activities</h4>
@@ -619,6 +620,32 @@
 	</div>
 </script>
 
+
+
 <script type="text/mustache-template" id="projectFilesTemplate">
 
+</script>
+
+<script type="text/mustache-template" id="moreActivityTemplate">
+  <div class="col-lg-6 col-sm-6 activity">
+    <section class="panel">
+      <div class="panel-body-more">
+
+          <h3 class="title moreact-title"><strong>View More</strong></h3>
+          <div class="clear">
+          </div>
+
+        <p>
+          If you do not see any acitivities that suit your liking pelase search through our actvities database for the one the best fits your needs.
+        </p>
+          <a href="#activities"><button type="button" class="btn btn-primary moreact-btn">View</button></a>
+
+
+        <small class="pull-right hide">
+          <a href="#"><i class="fa fa-comment-o"></i></a>
+        </small>
+      </div>
+    </div>
+    </section>
+   </div>
 </script>
