changed css on view more button and changed margins on content p (no more hiding content)

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -636,7 +636,7 @@
           </div>
 
         <p>
-          If you do not see any acitivities that suit your liking pelase search through our actvities database for the one the best fits your needs.
+          If you do not see any acitivities that suits your liking pelase search through our actvities database for the one the best fits your needs.
         </p>
           <a href="#activities"><button type="button" class="btn btn-primary moreact-btn">View</button></a>
 
