--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -590,6 +590,8 @@
         {{else}}
         	<button class="btn btn-primary pull-right btn-sm uploadProjectFile" value="{{activity.id}}"><i class="fa fa-file"></i> Upload New File</button>
         {{/if_notempty}}
+        <br><br>
+        <button class="btn btn-primary pull-right btn-sm uploadProjectFile" value="{{activity.id}}"><i class="fa fa-file"></i> View More {{curStage}} Activities</button>
 	      <small class="pull-right hide">
 	        <a href="#"><i class="fa fa-comment-o"></i> Comments ({{activity.comments_count}})</a>
 	      </small>
