--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -591,7 +591,7 @@
         	<button class="btn btn-primary pull-right btn-sm uploadProjectFile" value="{{activity.id}}"><i class="fa fa-file"></i> Upload New File</button>
         {{/if_notempty}}
         <br><br>
-        <button class="btn btn-primary pull-right btn-sm uploadProjectFile" value="{{activity.id}}"><i class="fa fa-file"></i> View More {{curStage}} Activities</button>
+        <button class="btn btn-primary pull-right btn-sm viewMore" value="{{actSkill}}"><i class="fa fa-file"></i> View More {{actSkill}} Activities</button>
 	      <small class="pull-right hide">
 	        <a href="#"><i class="fa fa-comment-o"></i> Comments ({{activity.comments_count}})</a>
 	      </small>
