edit org on deletebutton value holds mentor id #

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1416,4 +1416,5 @@ footer {
 .inner_login ul li a.editorg{
   background: #594f8d;
   background-color: #594f8d;
-  border: 1px solid #594f8d;}
+  border: 1px solid #594f8d;
+  font-size: 14px;}
