added delete pelete project functionality back to org

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -737,7 +737,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary btn-sm deleteMentor" value="{{id}}">Confirm</button>
+        <button type="button" class="btn btn-primary btn-sm deleteMentor" value="">Confirm</button>
       </div>
     </div>
   </div>
