moved invite button to right side and changed hand on hover over fids stage

--- a/app/webroot/css/dfcusa_pm.css
+++ b/app/webroot/css/dfcusa_pm.css
@@ -375,3 +375,6 @@ small {
 /*edit org*/
 .gHome{ cursor: pointer;}
 
+.inviteMentor{float:right;}
+
+#projectHeader .steps li{cursor: pointer; cursor: hand;}
