changed new project modal to be more intuitive and stylings as well

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -267,17 +267,12 @@
         <h4 class="modal-title">Create New Project</h4>
       </div>
       <div class="modal-body">
-        <button type="button" class="existingNewProject">I know what my project is</a><br>
-        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Approve.svg/240px-Approve.svg.png" alt="check mark">
-        <!-- Wikicommons fair use image -->
+        <button type="button" class="btn btn-primary existingNewProject">If you have already started a project this may be the place for you.<br>  Click here to fill in the details.</a><br>
         <br>
-        <button type="button" class="blankNewProject">I don't know what my project is</a><br>
-        <img src="http://upload.wikimedia.org/wikipedia/commons/1/13/Glossy_3d_blue_questionmark.png" alt="question mark">
-        <!-- Wikicommons fair use image -->
+        <button type="button" class="btn btn-success blankNewProject">If you don't have a project and want some ideas click here.</a><br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary createProject">Create Project</button>
       </div>
     </div>
   </div>
@@ -769,10 +764,9 @@
               </div>
               <div class="modal-body">
             <form class="contact" name="contact">
-                  <input type="text" class="form-control inviteName" placeholder="Recipient Name" aria-describedby="basic-addon1">
-                  <br>
+                  <input type="text" class="form-control inviteName" placeholder="Recipient Name example: (Jane Doe)" aria-describedby="basic-addon1">
                   <label class="label" for="email">Your E-mail</label>
-                  <input type="text" class="form-control inviteEmail" placeholder="Recipient Email" aria-describedby="basic-addon1"><br>
+                  <input type="text" class="form-control inviteEmail" placeholder="Recipient Email example: (JaneDoe@example.com)" aria-describedby="basic-addon1"><br>
           </form>
               </div>
               <div class="modal-footer">
