edited and scaled comics for welcome page, added to carousel, may be too much to render, considering scaling down images dpi and size wise

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -835,25 +835,42 @@
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
+      <!-- <li data-target="#myCarousel" data-slide-to="6"></li> -->
     </ol>
 
     <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
+      <div class="carousel-inner" role="listbox">
+      <!-- <div class="item active">
+        <img src="/dfcusa-pm/app/webroot/images/feelimaginedoshare.png" alt="Feel Imagine Do Share" width="460" height="345">
+      </div> -->
+
       <div class="item active">
-        <img src="/dfcusa-pm/app/webroot/images/placeholder.png" alt="Chania" width="460" height="345">
+        <img src="/dfcusa-pm/app/webroot/images/feelcomic.png" alt="Feel Comic" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="/dfcusa-pm/app/webroot/images/placeholder.png" alt="Chania" width="460" height="345">
+        <img src="/dfcusa-pm/app/webroot/images/imaginecomic.png" alt="Imagin Comic" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="/dfcusa-pm/app/webroot/images/placeholder.png" alt="Flower" width="460" height="345">
+        <img src="/dfcusa-pm/app/webroot/images/docomic1.png" alt="Do Comic 1" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="/dfcusa-pm/app/webroot/images/placeholder.png" alt="Flower" width="460" height="345">
+        <img src="/dfcusa-pm/app/webroot/images/docomic2.png" alt="Do Comic 2" width="460" height="345">
       </div>
+
+      <div class="item">
+        <img src="/dfcusa-pm/app/webroot/images/sharecomic1.png" alt="Share Comic 1" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="/dfcusa-pm/app/webroot/images/sharecomic2.png" alt="Share Comic 2" width="460" height="345">
+      </div>
+
+
     </div>
 
     <!-- Left and right controls -->
