contervint compiled templates into tempalte partials inside of carousel, still a work in progress

--- a/app/webroot/css/dfcusa_pm.css
+++ b/app/webroot/css/dfcusa_pm.css
@@ -353,10 +353,10 @@ small {
 
 /*INSIDE PAGE SCROLL*/
 
-.insidepage{
+/*.insidepage{
   max-height: 600px;
   overflow: scroll;
-}
+}*/
 
 
 /*progressbar*/
