--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -407,29 +407,58 @@
 	<div class="clear"></div>
 </script>
 
-<script type="text/mustache-template" id="getting_startedTemplate">
-	<div class="float hide">
-    <!-- <a name="getting_started"> -->
-		<iframe width="400" height="200" src="//www.youtube.com/embed/{{content.content_obj.getting_started.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
-	</div>
-	{{{content.content_obj.getting_started.text}}}
-</script>
 
-<script type="text/mustache-template" id="whyTemplate">
+<script type="text/mustache-template" id="whyTemplate-partial">
 <div id="1">
- <div id="basic-waypoint">
-  <!-- <a name="why_feel"> -->
-  </div>
   <div id="testdiv"></div>
-  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Sunday_Comic_Strip_Layout_Third_Page.png/800px-Sunday_Comic_Strip_Layout_Third_Page.png" alt="comic strip">
 	{{{content.content_obj.why.text}}}
 </div>
+</script>
+
+    <script type="text/x-handlebars-template" id="getting_startedTemplate-partial">
+      <div class="float hide">
+        <iframe width="400" height="200" src="//www.youtube.com/embed/{{content.content_obj.getting_started.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+      {{{content.content_obj.getting_started.text}}}
+    </script>
+
+    <script type="text/mustache-template" id="stageTemplate">
+  <div id="stageCarousel" class="carousel slide " data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      {{#each content.content_obj}}
+        <li data-target="#myStageCarousel" data-slide-to="{{id}}"></li>
+      {{/each}}
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+      {{> getting_startedTemplate}}
+      </div>
+
+      <div class="item">
+      {{> whyTemplate}}
+      </div>
+
+    </div>
+  </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
 </script>
 
 <script type="text/mustache-template" id="skillsTemplate">
   <!-- <a name="feel_skills"> -->
 
-  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Sunday_Comic_Strip_Layout_Third_Page.png/800px-Sunday_Comic_Strip_Layout_Third_Page.png" alt="comic strip">
 	{{{content.content_obj.skills.text}}}
 	<section class="panel clearfix skillsBox">
     <div class="wizard wizard-vertical clearfix" id="wizard-2">
@@ -459,57 +488,56 @@
 </div>
 </script>
 
-<script type="text/mustache-template" id="activitiesTemplate">
+    <script type="text/mustache-template" id="activitiesTemplate">
 
-  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Sunday_Comic_Strip_Layout_Third_Page.png/800px-Sunday_Comic_Strip_Layout_Third_Page.png" alt="comic strip">
- <!-- <a name="feel_activities"> -->
-	{{{content.content_obj.activities.text}}}
-	<br/>
-	<div id="toolbar">
-		<table width="80%" id="activitiesSearch">
-			<tr valign="top">
-				<td>
-          <div id="3">
-					<div class="input-group input-s m-t-sm">
-			      <select class="form-control input-sm skillsList" id="search-skill" value="All Skills">
-			      	<option value="all" selected>All skills</option>
-			     	</select>
-			    </div>
-			  </td>
-			 	<td>
-			 		<div class="input-group input-s m-t-sm">
-			      <select class="form-control input-sm" id="search-age_group">
-			      	<option value="all_ages" selected>All ages</option>
-			      	<option value="6-10">6-10 years old</option>
-			      	<option value="11-15">11-15 years old</option>
-			      	<option value="15-19">15-19 years old</option>
-			     	</select>
-			    </div>
-			 	</td>
-			 	<td>
-			 		<div class="input-group input-s m-t-sm">
-			      <select class="form-control input-sm" id="search-time_required">
-			      	<option value="all_times" selected>All times</option>
-			      	<option value="15">15-30 minutes</option>
-			      	<option value="30">30-60 minutes</option>
-			      	<option value="60">Over 60 minutes</option>
-			     	</select>
-			    </div>
-			 	</td>
-			 	<td>
-			 		<a style="margin-top: 10px" href="javascript:void(0)" target="_new" class="btn btn-success btn-sm searchActivities"><i class="fa fa-search"></i> Search</a>
-			 	</td>
-			</tr>
-		</table>
-	</div>
-	<div class="activities"></div>
-</div>
+     <!-- <a name="feel_activities"> -->
+    	{{{content.content_obj.activities.text}}}
+    	<br/>
+    	<div id="toolbar">
+    		<table width="80%" id="activitiesSearch">
+    			<tr valign="top">
+    				<td>
+              <div id="3">
+    					<div class="input-group input-s m-t-sm">
+    			      <select class="form-control input-sm skillsList" id="search-skill" value="All Skills">
+    			      	<option value="all" selected>All skills</option>
+    			     	</select>
+    			    </div>
+    			  </td>
+    			 	<td>
+    			 		<div class="input-group input-s m-t-sm">
+    			      <select class="form-control input-sm" id="search-age_group">
+    			      	<option value="all_ages" selected>All ages</option>
+    			      	<option value="6-10">6-10 years old</option>
+    			      	<option value="11-15">11-15 years old</option>
+    			      	<option value="15-19">15-19 years old</option>
+    			     	</select>
+    			    </div>
+    			 	</td>
+    			 	<td>
+    			 		<div class="input-group input-s m-t-sm">
+    			      <select class="form-control input-sm" id="search-time_required">
+    			      	<option value="all_times" selected>All times</option>
+    			      	<option value="15">15-30 minutes</option>
+    			      	<option value="30">30-60 minutes</option>
+    			      	<option value="60">Over 60 minutes</option>
+    			     	</select>
+    			    </div>
+    			 	</td>
+    			 	<td>
+    			 		<a style="margin-top: 10px" href="javascript:void(0)" target="_new" class="btn btn-success btn-sm searchActivities"><i class="fa fa-search"></i> Search</a>
+    			 	</td>
+    			</tr>
+    		</table>
+    	</div>
+    	<div class="activities"></div>
+    </div>
 </script>
+
 
 <script type="text/mustache-template" id="submitTemplate">
   <!-- <a name="feel_submit"> -->
     <div id="2"></div>
-  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Sunday_Comic_Strip_Layout_Third_Page.png/800px-Sunday_Comic_Strip_Layout_Third_Page.png" alt="comic strip">
 
 
 	{{{content.content_obj.submit.text}}}
@@ -831,7 +859,7 @@
   <div id="myCarousel" class="carousel slide onboardingCarousel" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0"></li>
+
     {{#each content}}
         <li data-target="#myCarousel" data-slide-to="{{id}}"></li>
     {{/each}}
@@ -841,7 +869,7 @@
     <div class="carousel-inner" role="listbox">
         {{#each content}}
           <div class="item panel1">
-            <div class="{{stage}}panel">
+            <div class="{{stage}}-panel">
             {{{content_obj.content}}}
             {{{content_obj.getting_started.text}}}
             {{{content_obj.why.text}}}
