--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -423,36 +423,36 @@
 </script>
 
 <script type="text/x-handlebars-template" id="stageTemplate">
-<div id="stageCarousel" class="carousel slide " data-ride="carousel">
+<div id="stageCarousel" class="carousel slide stageCarousel" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
 
-    <li data-target="#myStageCarousel" data-slide-to="0" class='active'></li>
-    <li data-target="#myStageCarousel" data-slide-to="1"></li>
-    <li data-target="#myStageCarousel" data-slide-to="2"></li>
+    <li class='pan1 active' data-target="#myStageCarousel" data-slide-to="0"></li>
+    <li class='pan2' data-target="#myStageCarousel" data-slide-to="1"></li>
+    <li class='pan3' data-target="#myStageCarousel" data-slide-to="2"></li>
   </ol>
 
   <div class="carousel-inner" role="listbox">
-    <div class="item panel1 active">
+    <div class="item pan1 active" rel=0>
       {{> getting_started}}
     </div>
 
-    <div class="item panel2">
+    <div class="item pan2" rel=1>
       {{> why}}
     </div>
 
-    <div class="item panel3">
+    <div class="item pan3" rel=2>
       {{> submit}}
     </div>
   </div>
 </div>
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myStageCarousel" role="button" data-slide="prev">
+   <!-- <a class="left carousel-control" href="#myStageCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myStageCarousel" role="button" data-slide="next">
+    </a> -->
+    <a class="right carousel-control nextSlide" href="#myStageCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
