first paine ne deliverables now shows when scrolled to

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -467,7 +467,7 @@
 </script>
 
 <script type="text/mustache-template" id="skillsTemplate-partial">
-  <div>
+  <div id='skillsDisplay'>
 	{{{content.content_obj.skills.text}}}
 	 <section class="panel clearfix skillsBox">
     <div class="wizard wizard-vertical clearfix" id="wizard-2">
@@ -545,7 +545,7 @@
 
 <script type="text/mustache-template" id="submitTemplate-partial">
   <!-- <a name="feel_submit"> -->
-    <div id="2"></div>
+    <div id="submitDisplay">
 
 
 	{{{content.content_obj.submit.text}}}
@@ -590,6 +590,7 @@
   <span aria-hidden="true"></span> Next Section
 </button>
  </div>
+</div>
 </script>
 
 <script type="text/mustache-template" id="activityTemplate">
