changed soeme button logic to skip stage under carousel

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -463,6 +463,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+<button type="button" class="btn btn-success btn-sm skipStep">Skip This Stage</button>
 
 </script>
 
