added reverse ability changed layout and button. fixed carousel indicator bug

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -431,6 +431,7 @@
     <li class='pan2' data-target="#myStageCarousel" data-slide-to="1"></li>
     <li class='pan3' data-target="#myStageCarousel" data-slide-to="2"></li>
     <li class='pan4' data-target="#myStageCarousel" data-slide-to="3"></li>
+    <br><button type="button" class="btn btn-success btn-sm skipStep">Skip This Stage</button>
   </ol>
 
   <div class="carousel-inner" role="listbox">
@@ -454,16 +455,16 @@
 </div>
 
     <!-- Left and right controls -->
-   <!-- <a class="left carousel-control" href="#myStageCarousel" role="button" data-slide="prev">
+   <a class="left carousel-control prevSlide" href="#myStageCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
-    </a> -->
+    </a>
     <a class="right carousel-control nextSlide" href="#myStageCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
-<button type="button" class="btn btn-success btn-sm skipStep">Skip This Stage</button>
+
 
 </script>
 
