finally handlebars rendering properly, need to redo slide advancers

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -477,19 +477,11 @@
 </script>
 
 <script type="text/x-handlebars-template" id="welcomeTemplate-partial">
-  <div id="welcomeLanding">
 
-  content
-  {{content}}
-  content.content_obj
-  {{content.content_obj}}
-  content.content_obj.content
-  {{content.content_obj.content}}
+{{{welcomeContent.content_obj.content}}}
 
-  <!-- {{{content_obj.content}}}
-    {{{content_obj.getting_started.text}}}
-    {{{content_obj.why.text}}}
-  </div> -->
+
+
 </script>
 
 <script type="text/mustache-template" id="skillsTemplate-partial">
